--- a/flasktest/flaskjinja/templates/upload.html
+++ b/flasktest/flaskjinja/templates/upload.html
@@ -11,7 +11,7 @@ File Upload
 <div class="container-fluid">
    <form action="/fileUpload" method="post" enctype="multipart/form-data">
     <input type="file" name="file"/>
-    <button type="submit">눌러</button>
+    <button type="submit">눌러</button>                                                                                                     
     </form>
   </div>
 {% endblock %}
@@ -20,7 +20,7 @@ File Upload
 {% block footer %}
 <br><br>
 <div class="container-fluid">
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid" style="margin-bottom: 0em;">
         <div class="container">
           <h1 class="display-4">FOOTER</h1>
           <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
