--- a/flasktest/flaskjinja/templates/list.html
+++ b/flasktest/flaskjinja/templates/list.html
@@ -35,7 +35,7 @@ File List
 {% block footer %}
 <br><br>
 <div class="container-fluid">
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid" style="margin-bottom: 0em;">
         <div class="container">
           <h1 class="display-4">FOOTER</h1>
           <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
